[tool.poetry]
name = "hit_blow_app"
version = "0.1.0"
description = ""
authors = ["kamiazya <yuki@kamiazya.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
